// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`current account reducers update account 1`] = `
{
  "_internal": {
    "loading": {
      "updateAccount": true,
    },
  },
  "settings": [],
}
`;

exports[`current account reducers update account 2`] = `
{
  "_internal": {
    "loading": {
      "updateAccount": false,
    },
  },
  "current_subscription": undefined,
  "settings": [
    {
      "id": 10,
    },
  ],
}
`;

exports[`current account reducers update account 3`] = `
{
  "_internal": {
    "loading": {
      "updateAccount": false,
    },
  },
  "settings": [],
}
`;

exports[`current account reducers update account owner 1`] = `
{
  "_internal": {
    "loading": {},
  },
  "settings": [],
  "user_id": 1,
}
`;

exports[`current account reducers update setting 1`] = `
{
  "_internal": {
    "loading": {},
  },
  "settings": [
    {
      "hello": "world",
    },
  ],
}
`;

exports[`current account reducers update setting 2`] = `
{
  "_internal": {
    "loading": {},
  },
  "settings": [
    {
      "hello": "world",
      "id": 1,
    },
  ],
}
`;
